# Camera_to_Opensim

./: README.md  mock_pub.py  verify_pipeline.py
camera_to_opensim/: package.xml  setup.cfg  setup.py
camera_to_opensim/camera_to_opensim/: data_processing_node.py  pose2sim_wrapper.py  pose_estimation_node.py  sports2d_node.py  sports2d_wrapper.py
camera_to_opensim/launch/: convert.launch.py
camera_to_opensim_interfaces/: CMakeLists.txt  package.xml
camera_to_opensim_interfaces/msg/: Keypoint2D.msg  Person.msg
